--- a/tasks/adaptations/ami/cloze/ami_synth_cloze.yaml
+++ b/tasks/adaptations/ami/cloze/ami_synth_cloze.yaml
@@ -1,6 +1,6 @@
 include: ../_ami_synth_yaml
 task: itabench_ami_synth_cloze
 dataset_name: Synth
-doc_to_text: "Tweet: '{{text}}'.\nIl tweet"
+doc_to_text: "Tweet: '{{text}}'\nIl tweet"
 doc_to_target: label
-doc_to_choice: ["non presenta caratteristiche misogine.", "presenta caratteristiche misogine."]
+doc_to_choice: ["non presenta caratteristiche misogine", "presenta caratteristiche misogine"]
