--- a/tasks/adaptations/wic/mc/wic_mc.yaml
+++ b/tasks/adaptations/wic/mc/wic_mc.yaml
@@ -4,4 +4,4 @@ task: itabench_wic_mc
 
 doc_to_text: "Frase 1: {{sentence1}}\nFrase 2: {{sentence2}}\nDomanda: La parola \"{{lemma}}\" ha lo stesso signicato nelle due frasi precedenti? Rispondi sì o no:"
 doc_to_target: label
-doc_to_choice: ["no", "si"]
+doc_to_choice: ["no", "sì"]
