--- a/tasks/adaptations/nermud/nermud_mc.yaml
+++ b/tasks/adaptations/nermud/nermud_mc.yaml
@@ -1,7 +1,7 @@
-group: itabench_nermud_mc
+group: itabench_nermud
 task:
-- itabench_nermud_adg_mc
-- itabench_nermud_wn_mc
+- itabench_nermud_adg_mp
+- itabench_nermud_wn_mp
 aggregate_metric_list:
   - metric: acc
     aggregation: mean
