discotex fixed prompts & added minor changes

--- a/tasks/adaptations/ami/behaviour/ami_behaviour_p3.yaml
+++ b/tasks/adaptations/ami/behaviour/ami_behaviour_p3.yaml
@@ -1,6 +1,6 @@
 include: _ami_behaviour_yaml
 task: itabench_ami_behaviour_p3
 
-doc_to_text: "Quale è il livello di misoginia presenten nel seguente tweet '{{text}}'?\nA. Nessuno\nB. Misogino\nC. Misogino aggressivo"
+doc_to_text: "Quale è il livello di misoginia presenten nel seguente tweet '{{text}}'?\nA. Nessuno\nB. Misogino\nC. Misogino aggressivo\nRisposta:"
 doc_to_target: label
 doc_to_choice: ["A", "B", "C"]
