--- a/tasks/adaptations/ami/synth/ami_synth_p6.yaml
+++ b/tasks/adaptations/ami/synth/ami_synth_p6.yaml
@@ -1,6 +1,6 @@
 include: _ami_synth_yaml
 task: itabench_ami_synth_p6
 
-doc_to_text: "Devi indicare se un tweet presenta caratteristiche misogine.\n\nIl seguente tweet: '{{text}}'"
+doc_to_text: "Devi indicare se un tweet presenta caratteristiche misogine.\nIl seguente tweet: '{{text}}'"
 doc_to_target: label
 doc_to_choice: ["non presenta caratteristiche misogine", "presenta caratteristiche misogine"]
