--- a/tasks/adaptations/discotex/discotex_p5.yaml
+++ b/tasks/adaptations/discotex/discotex_p5.yaml
@@ -1,5 +1,7 @@
+include: _discotex_yaml
+
 task: itabench_discotex_p5
 
-doc_to_text: "Paragrafo: \"{{text}}\"\nContinuazioni\n-. \"{{choices[0]}}\"\n-. \"{{choices[1]}}\"\n-. \"{{choices[2]}}\"\n-. \"{{choices[3]}}\"\n-. {{choices[4]}}\nTra le precedenti frasi la continuazione del paragrafo è:"
+doc_to_text: "Paragrafo: \"{{text}}\"\nContinuazioni{{'\n- ' ~ choices[0] if not choices[0] == 'nessuna delle precedenti'}}{{'\n- ' ~ choices[1] if not choices[1] == 'nessuna delle precedenti'}}{{'\n- ' ~ choices[2] if not choices[2] == 'nessuna delle precedenti'}}{{'\n- ' ~ choices[3] if not choices[3] == 'nessuna delle precedenti'}}{{'\n- ' ~ choices[4] if not choices[4] == 'nessuna delle precedenti'}}\nTra le precedenti frasi la continuazione del paragrafo è:"
 doc_to_target: label
 doc_to_choice: choices
