--- a/tasks/adaptations/ami/behaviour/ami_behaviour_p2.yaml
+++ b/tasks/adaptations/ami/behaviour/ami_behaviour_p2.yaml
@@ -1,6 +1,6 @@
 include: _ami_behaviour_yaml
 task: itabench_ami_behaviour_p2
 
-doc_to_text: "Indica il livello di misoginia presente nei seguenti tweet.\n\nQuale è il livello di misoginia presenten nel seguente tweet '{{text}}'?"
+doc_to_text: "Indica il livello di misoginia presente nei seguenti tweet.\nQuale è il livello di misoginia presenten nel seguente tweet '{{text}}'?"
 doc_to_target: label
 doc_to_choice: ["Nessuno", "Misogino", "Misogino aggressivo"]
