--- a/tasks/adaptations/ami/synth/ami_synth_p3.yaml
+++ b/tasks/adaptations/ami/synth/ami_synth_p3.yaml
@@ -1,6 +1,6 @@
 include: _ami_synth_yaml
 task: itabench_ami_synth_p3
 
-doc_to_text: "Quale è il livello di misoginia nel seguente tweet '{{text}}'?\nA. Neutro\nB. Misogino"
+doc_to_text: "Quale è il livello di misoginia nel seguente tweet '{{text}}'?\nA. Neutro\nB. Misogino\nRisposta:"
 doc_to_target: label
 doc_to_choice: ["A", "B"]
