--- a/tasks/adaptations/ami/synth/ami_synth_p4.yaml
+++ b/tasks/adaptations/ami/synth/ami_synth_p4.yaml
@@ -1,6 +1,6 @@
 include: _ami_synth_yaml
 task: itabench_ami_synth_p4
 
-doc_to_text: "Devi indicare se un tweet presenta caratteristiche misogine.\nQuale è il livello di misoginia nel seguente tweet '{{text}}'?\nA. Neutro\nB. Misogino\nRisposta:"
+doc_to_text: "Devi indicare se un tweet presenta caratteristiche misogine.\nIl seguente tweet contiene caratteristiche misogine: '{{text}}'?\nA. no\nB. sì\nRisposta:"
 doc_to_target: label
 doc_to_choice: ["A", "B"]
