--- a/tasks/adaptations/pretens/pretens_p1.yaml
+++ b/tasks/adaptations/pretens/pretens_p1.yaml
@@ -2,6 +2,6 @@ include: _pretens_yaml
 
 task: itabench_pretens_p1
 
-doc_to_text: "{{text}}\nDomanda: La frase precedente ha senso? Rispondi sì o no:"
+doc_to_text: "{{text}}\nDomanda: La frase precedente ha senso?"
 doc_to_target: label
 doc_to_choice: ["no", "sì"]
