--- a/tasks/adaptations/pretens/pretens_p4.yaml
+++ b/tasks/adaptations/pretens/pretens_p4.yaml
@@ -2,6 +2,6 @@ include: _pretens_yaml
 
 task: itabench_pretens_p4
 
-doc_to_text: "Indica se le seguenti frasi hanno senso.\n{{text}}\nDomanda: La frase precedente ha senso?\nA. no\nB. sì\nRisposta:"
+doc_to_text: "Devi capire se una frase data ha semanticamente senso\n{{text}}\nDomanda: La frase precedente ha senso?\nA. no\nB. sì\nRisposta:"
 doc_to_target: label
 doc_to_choice: ["A", "B"]
