--- a/tasks/leaderboard-it/bbh_it/geometric_shapes.yaml
+++ b/tasks/leaderboard-it/bbh_it/geometric_shapes.yaml
@@ -1,10 +1,10 @@
 dataset_name: geometric_shapes
-description: 'Name geometric shapes from their SVG paths.'
+description: 'Assegna un nome alle forme geometriche partendo dai loro percorsi SVG.'
 doc_to_choice: ["(A)","(B)","(C)","(D)","(E)","(F)","(G)","(H)","(I)","(J)","(K)"]
 fewshot_config:
   sampler: first_n
   samples:
-  - input: "L'elemento SVG path <path d=\"M 31.00,73.00 L 32.00,59.00 L 44.00,50.00 L 49.00,41.00 L 64.00,37.00 L 71.00,55.00 L 64.00,76.00 L 52.00,61.00 L 31.00,73.00\"/>
+  - input_translated: "L'elemento SVG path <path d=\"M 31.00,73.00 L 32.00,59.00 L 44.00,50.00 L 49.00,41.00 L 64.00,37.00 L 71.00,55.00 L 64.00,76.00 L 52.00,61.00 L 31.00,73.00\"/>
       disegna un
 
       Opzioni:
@@ -19,8 +19,8 @@ fewshot_config:
       (H) rettangolo
       (I) settore
       (J) triangolo" 
-    target: (F)
-  - input: "L'elemento SVG path <path d=\"M 14.19,26.04 L 51.43,39.21 L 58.44,36.69 L 56.63,30.17 L 48.53,26.66 L 14.19,26.04\"/> disegna un
+    target_translated: (F)
+  - input_translated: "L'elemento SVG path <path d=\"M 14.19,26.04 L 51.43,39.21 L 58.44,36.69 L 56.63,30.17 L 48.53,26.66 L 14.19,26.04\"/> disegna un
 
       Opzioni:
 
@@ -34,8 +34,8 @@ fewshot_config:
       (H) rettangolo
       (I) settore
       (J) triangolo"
-    target: (G)
-  - input: "L'elemento SVG path <path d=\"M 41.00,43.00 L 37.00,34.00 L 41.00,33.00 L 45.00,34.00 L 41.00,43.00\"/> disegna un
+    target_translated: (G)
+  - input_translated: "L'elemento SVG path <path d=\"M 41.00,43.00 L 37.00,34.00 L 41.00,33.00 L 45.00,34.00 L 41.00,43.00\"/> disegna un
 
       Opzioni:
 
@@ -49,6 +49,6 @@ fewshot_config:
       (H) rettangolo
       (I) settore
       (J) triangolo"
-    target: (D)
+    target_translated: (D)
 include: _fewshot_template_yaml
 task: leaderboard_bbh_geometric_shapes
