--- a/tasks/leaderboard-it/bbh_it/date_understanding.yaml
+++ b/tasks/leaderboard-it/bbh_it/date_understanding.yaml
@@ -1,10 +1,10 @@
 dataset_name: date_understanding
-description: 'Infer the date from context.'
+description: 'Dedurre la data dal contesto.'
 doc_to_choice: ["(A)", "(B)", "(C)", "(D)", "(E)", "(F)"]
 fewshot_config:
   sampler: first_n
   samples:
-  - input: "Oggi è la Vigilia di Natale del 1937. Qual è la data di 10 giorni fa in MM/DD/YYYY?
+  - input_translated: "Oggi è la Vigilia di Natale del 1937. Qual è la data di 10 giorni fa in MM/DD/YYYY?
 
       Opzioni:
 
@@ -14,8 +14,8 @@ fewshot_config:
       (D) 12/14/1937
       (E) 07/14/1938
       (F) 12/14/1988"
-    target: (D)
-  - input: "Domani è l’11/12/2019. Qual è la data di un anno fa rispetto a oggi in MM/DD/YYYY?
+    target_translated: (D)
+  - input_translated: "Domani è l’11/12/2019. Qual è la data di un anno fa rispetto a oggi in MM/DD/YYYY?
 
       Opzioni:
 
@@ -24,8 +24,8 @@ fewshot_config:
       (C) 08/25/2018
       (D) 11/02/2018
       (E) 11/04/2018"
-    target: (B)
-  - input: "Jane e John si sono sposati il 2 gennaio 1958. Oggi è il loro quinto anniversario. Qual è la data di domani in MM/DD/YYYY?
+    target_translated: (B)
+  - input_translated: "Jane e John si sono sposati il 2 gennaio 1958. Oggi è il loro quinto anniversario. Qual è la data di domani in MM/DD/YYYY?
 
       Opzioni:
 
@@ -35,6 +35,6 @@ fewshot_config:
       (D) 10/14/1960
       (E) 01/03/1982
       (F) 12/03/1960"
-    target: (B)
+    target_translated: (B)
 include: _fewshot_template_yaml
 task: leaderboard_bbh_date_understanding
