--- a/tasks/leaderboard-it/bbh_it/movie_recommendation.yaml
+++ b/tasks/leaderboard-it/bbh_it/movie_recommendation.yaml
@@ -1,10 +1,10 @@
 dataset_name: movie_recommendation
-description: 'Recommend movies similar to the given list of movies.'
+description: "Consiglia film simili all'elenco di film fornito. di oggetti."
 doc_to_choice: ["(A)","(B)","(C)","(D)","(E)","(F)"]
 fewshot_config:
   sampler: first_n
   samples:
-  - input: "Trova un film simile a Star Wars Episodio IV - Una nuova speranza, Indiana Jones e l’ultima crociata, Star Wars Episodio V - L’Impero colpisce ancora, Il grande Lebowski:
+  - input_translated: "Trova un film simile a Star Wars Episodio IV - Una nuova speranza, Indiana Jones e l’ultima crociata, Star Wars Episodio V - L’Impero colpisce ancora, Il grande Lebowski:
 
       Opzioni:
 
@@ -13,8 +13,8 @@ fewshot_config:
       (C) La storia fantastica (The Princess Bride)
       (D) The Barkley Marathons: The Race That Eats Its Young
       (E) Bug"
-    target: (C)
-  - input: "Trova un film simile a Twister, Il silenzio degli innocenti, Independence Day, Braveheart:
+    target_translated: (C)
+  - input_translated: "Trova un film simile a Twister, Il silenzio degli innocenti, Independence Day, Braveheart:
 
       Opzioni:
 
@@ -23,8 +23,8 @@ fewshot_config:
       (C) Forrest Gump
       (D) The Salton Sea
       (E) Extreme Days"
-    target: (C)
-  - input: "Trova un film simile a Minority Report, Total Recall, Inside Out, Forrest Gump:
+    target_translated: (C)
+  - input_translated: "Trova un film simile a Minority Report, Total Recall, Inside Out, Forrest Gump:
 
       Opzioni:
 
@@ -32,6 +32,6 @@ fewshot_config:
       (B) Lilting
       (C) Catwoman
       (D) Edge of Tomorrow"
-    target: (D)
+    target_translated: (D)
 include: _fewshot_template_yaml
 task: leaderboard_bbh_movie_recommendation
