--- a/tasks/leaderboard-it/bbh_it/object_counting.yaml
+++ b/tasks/leaderboard-it/bbh_it/object_counting.yaml
@@ -1,18 +1,17 @@
 dataset_name: object_counting
-description: 'Questions that involve enumerating objects and asking the model to count
-  them.'
+description: "Domande che implicano l'enumerazione di oggetti e la richiesta al modello di contarli."
 doc_to_choice: ["0","1","2","3","4","5","6","7","8","9","10", "11", "12", "13", "14", "15", "16", "17", "18"]
 fewshot_config:
   sampler: first_n
   samples:
-  - input: I have a blackberry, a clarinet, a nectarine, a plum, a strawberry, a banana,
-      a flute, an orange, and a violin. How many fruits do I have?
-    target: '6'
-  - input: I have an orange, a raspberry, two peaches, a blackberry, an apple, a grape,
-      a nectarine, and three plums. How many fruits do I have?
-    target: '11'
-  - input: I have a lettuce head, a head of broccoli, an onion, a stalk of celery,
-      two carrots, a garlic, and a yam. How many vegetables do I have?
-    target: '8'
+  - input_translated: Ho una mora, un clarinetto, una nettarina, una prugna, una fragola, una banana,
+      un flauto, un’arancia e un violino. Quanti frutti ho?
+    target_translated: '6'
+  - input_translated: Ho un’arancia, un lampone, due pesche, una mora, una mela, un acino d’uva,
+      una nettarina e tre prugne. Quanti frutti ho?
+    target_translated: '11'
+  - input_translated: Ho un cespo di lattuga, una testa di broccoli, una cipolla, un gambo di sedano,
+      due carote, un aglio e una patata dolce. Quante verdure ho?
+    target_translated: '8'
 include: _fewshot_template_yaml
 task: leaderboard_bbh_object_counting
