--- a/tasks/leaderboard-it/bbh_it/reasoning_about_colored_objects.yaml
+++ b/tasks/leaderboard-it/bbh_it/reasoning_about_colored_objects.yaml
@@ -1,114 +1,66 @@
 dataset_name: reasoning_about_colored_objects
-description: 'Answer extremely simple questions about the colors of objects on a surface.'
+description: 'Rispondi a domande estremamente semplici sui colori degli oggetti su una superficie.'
 doc_to_choice: ["(A)","(B)","(C)","(D)","(E)","(F)","(G)","(H)","(I)","(J)","(K)","(L)","(M)","(N)","(O)","(P)","(Q)","(R)"]
 fewshot_config:
   sampler: first_n
   samples:
-  - input: 'On the nightstand, there is a red pencil, a purple mug, a burgundy keychain,
-      a fuchsia teddy bear, a black plate, and a blue stress ball. What color is the
-      stress ball?
+  - input_translated: "Sul comodino c’è una matita rossa, una tazza viola, un portachiavi bordeaux, un orsacchiotto fucsia, un piatto nero e una pallina antistress blu. Di che colore è la pallina antistress?
 
-      Options:
+      Opzioni:
 
-      (A) red
-
-      (B) orange
-
-      (C) yellow
-
-      (D) green
-
-      (E) blue
-
-      (F) brown
-
+      (A) rosso
+      (B) arancione
+      (C) giallo
+      (D) verde
+      (E) blu
+      (F) marrone
       (G) magenta
-
-      (H) fuchsia
-
-      (I) mauve
-
+      (H) fucsia
+      (I) malva
       (J) teal
+      (K) turchese
+      (L) bordeaux
+      (M) argento
+      (N) oro
+      (O) nero
+      (P) grigio
+      (Q) viola
+      (R) rosa"
+    target_translated: (E)
+  - input_translated: "Sul tavolo vedi una serie di oggetti disposti in fila: una graffetta viola, una pallina antistress rosa, un portachiavi marrone, uno scrunchie/caricatore verde, un fidget spinner malva e una penna bordeaux. Qual è il colore dell’oggetto direttamente a destra della pallina antistress?
 
-      (K) turquoise
+      Opzioni:
 
-      (L) burgundy
-
-      (M) silver
-
-      (N) gold
-
-      (O) black
-
-      (P) grey
-
-      (Q) purple
-
-      (R) pink'
-    target: (E)
-  - input: 'On the table, you see a bunch of objects arranged in a row: a purple paperclip,
-      a pink stress ball, a brown keychain, a green scrunchiephone charger, a mauve
-      fidget spinner, and a burgundy pen. What is the color of the object directly
-      to the right of the stress ball?
-
-      Options:
-
-      (A) red
-
-      (B) orange
-
-      (C) yellow
-
-      (D) green
-
-      (E) blue
-
-      (F) brown
-
+      (A) rosso
+      (B) arancione
+      (C) giallo
+      (D) verde
+      (E) blu
+      (F) marrone
       (G) magenta
-
-      (H) fuchsia
-
-      (I) mauve
-
+      (H) fucsia
+      (I) malva
       (J) teal
+      (K) turchese
+      (L) bordeaux
+      (M) argento
+      (N) oro
+      (O) nero
+      (P) grigio
+      (Q) viola
+      (R) rosa"
+    target_translated: (F)
+  - input_translated: "Sul comodino vedi i seguenti oggetti disposti in fila: un piatto teal, un portachiavi bordeaux, uno scrunchie/caricatore giallo, una tazza arancione, un quaderno rosa e una tazza grigia. Quanti oggetti non arancioni vedi alla sinistra dell’oggetto teal?
 
-      (K) turquoise
-
-      (L) burgundy
-
-      (M) silver
-
-      (N) gold
-
-      (O) black
-
-      (P) grey
-
-      (Q) purple
-
-      (R) pink'
-    target: (F)
-  - input: 'On the nightstand, you see the following items arranged in a row: a teal
-      plate, a burgundy keychain, a yellow scrunchiephone charger, an orange mug,
-      a pink notebook, and a grey cup. How many non-orange items do you see to the
-      left of the teal item?
-
-      Options:
+      Opzioni:
 
       (A) zero
-
-      (B) one
-
-      (C) two
-
-      (D) three
-
-      (E) four
-
-      (F) five
-
-      (G) six'
-    target: (A)
+      (B) uno
+      (C) due
+      (D) tre
+      (E) quattro
+      (F) cinque
+      (G) sei"
+    target_translated: (A)
 include: _fewshot_template_yaml
 task: leaderboard_bbh_reasoning_about_colored_objects
