--- a/tasks/leaderboard-it/bbh_it/salient_translation_error_detection.yaml
+++ b/tasks/leaderboard-it/bbh_it/salient_translation_error_detection.yaml
@@ -1,101 +1,64 @@
 dataset_name: salient_translation_error_detection
-description: 'Detect the type of error in an English translation of a German source
-  sentence.'
+description: 'Rileva il tipo di errore nella traduzione inglese di una frase originale tedesca.'
 doc_to_choice: ["(A)","(B)","(C)","(D)","(E)","(F)"]
 fewshot_config:
   sampler: first_n
   samples:
-  - input: "The following translations from German to English contain a particular
-      error. That error will be one of the following types: Named Entities: An entity
-      (names, places, locations, etc.) is changed to a different entity. Numerical
-      Values: Numerical values (ordinals or cardinals), dates, and/or units are changed.
-      Modifiers or Adjectives: The modifiers and adjectives pertaining to a noun are
-      changed. Negation or Antonyms: Introduce or remove a negation or change comparatives
-      to their antonyms. Facts: Trivial factual errors not pertaining to the above
-      classes are introduced in the translations. Dropped Content: A significant clause
-      in the translation is removed. Please identify that error.  Source: In der Liste
-      der Baudenkmale in Lenzen (Elbe) sind alle Baudenkmale der brandenburgischen
+  - input_translated: "Le seguenti traduzioni dal tedesco all’inglese contengono un particolare errore.
+      Tale errore sarà di uno dei seguenti tipi: Entità nominate: Un’entità (nomi, luoghi, località, ecc.) viene cambiata in un’altra entità. Valori numerici: Valori numerici (ordinali o cardinali), date e/o unità vengono modificati. Modificatori o aggettivi: I modificatori e gli aggettivi relativi a un sostantivo vengono cambiati. Negazione o contrari: Viene introdotta o rimossa una negazione oppure vengono cambiati comparativi con i loro contrari. Fatti: Vengono introdotti errori fattuali banali non appartenenti alle categorie precedenti. Contenuto omesso (Dropped Content): Una parte significativa della frase viene omessa nella traduzione.
+      Identifica l’errore.  
+      
+      Fonte: In der Liste der Baudenkmale in Lenzen (Elbe) sind alle Baudenkmale der brandenburgischen
       Stadt Lenzen (Elbe) und ihrer Ortsteile aufgelistet.
 
-      Translation: In the list of architectural monuments in Lenzen all architectural
+      Traduzione: In the list of architectural monuments in Lenzen all architectural
       monuments of the Brandenburg city of Lenzen and its districts are listed.
 
-      The translation contains an error pertaining to
+      La traduzione contiene un errore relativo a:
 
-      Options:
+      Opzioni:
+      (A) Modificatori o aggettivi
+      (B) Valori numerici
+      (C) Negazione o contrari
+      (D) Entità nominate
+      (E) Contenuto omesso
+      (F) Fatti"
+    target_translated: (D)
+  - input_translated: "Le seguenti traduzioni dal tedesco all’inglese contengono un particolare errore.
+      Tale errore sarà di uno dei seguenti tipi: Entità nominate: Un’entità (nomi, luoghi, località, ecc.) viene cambiata in un’altra entità. Valori numerici: Valori numerici (ordinali o cardinali), date e/o unità vengono modificati. Modificatori o aggettivi: I modificatori e gli aggettivi relativi a un sostantivo vengono cambiati. Negazione o contrari: Viene introdotta o rimossa una negazione oppure vengono cambiati comparativi con i loro contrari. Fatti: Vengono introdotti errori fattuali banali non appartenenti alle categorie precedenti. Contenuto omesso (Dropped Content): Una parte significativa della frase viene omessa nella traduzione.
+      Identifica l’errore.  
+      
+      Fonte: Auf dieser Seite sind die Baudenkmäler der oberbayerischen Großen Kreisstadt Landsberg am Lech zusammengestellt.
 
-      (A) Modifiers or Adjectives
+      Traduzione: On this page are compiled the architectural monuments of the town of Landsberg am Lech.
 
-      (B) Numerical Values
+      La traduzione contiene un errore relativo a:
 
-      (C) Negation or Antonyms
+      Opzioni:
+      (A) Modificatori o aggettivi
+      (B) Valori numerici
+      (C) Negazione o contrari
+      (D) Entità nominate
+      (E) Contenuto omesso
+      (F) Fatti"
+    target_translated: (E)
+  - input_translated: "Le seguenti traduzioni dal tedesco all’inglese contengono un particolare errore.
+      Tale errore sarà di uno dei seguenti tipi: Entità nominate: Un’entità (nomi, luoghi, località, ecc.) viene cambiata in un’altra entità. Valori numerici: Valori numerici (ordinali o cardinali), date e/o unità vengono modificati. Modificatori o aggettivi: I modificatori e gli aggettivi relativi a un sostantivo vengono cambiati. Negazione o contrari: Viene introdotta o rimossa una negazione oppure vengono cambiati comparativi con i loro contrari. Fatti: Vengono introdotti errori fattuali banali non appartenenti alle categorie precedenti. Contenuto omesso (Dropped Content): Una parte significativa della frase viene omessa nella traduzione.
+      Identifica l’errore.  
+      
+      Fonte: Łeba ist eine Kleinstadt und ein Badeort im Powiat Lęborski der polnischen Woiwodschaft Pommern.
 
-      (D) Named Entities
+      Traduzione: Eba is not a small town and seaside resort in the Powiat Léborski county of the Pomeranian Voivodeship of Poland.
 
-      (E) Dropped Content
+      La traduzione contiene un errore relativo a:
 
-      (F) Facts"
-    target: (D)
-  - input: "The following translations from German to English contain a particular
-      error. That error will be one of the following types: Named Entities: An entity
-      (names, places, locations, etc.) is changed to a different entity. Numerical
-      Values: Numerical values (ordinals or cardinals), dates, and/or units are changed.
-      Modifiers or Adjectives: The modifiers and adjectives pertaining to a noun are
-      changed. Negation or Antonyms: Introduce or remove a negation or change comparatives
-      to their antonyms. Facts: Trivial factual errors not pertaining to the above
-      classes are introduced in the translations. Dropped Content: A significant clause
-      in the translation is removed. Please identify that error.  Source: Auf dieser
-      Seite sind die Baudenkm\xE4ler der oberbayerischen Gro\xDFen Kreisstadt Landsberg
-      am Lech zusammengestellt.
-
-      Translation: On this page are compiled the architectural monuments of the town of
-      Landsberg am Lech.
-
-      The translation contains an error pertaining to
-
-      Options:
-
-      (A) Modifiers or Adjectives
-
-      (B) Numerical Values
-
-      (C) Negation or Antonyms
-
-      (D) Named Entities
-
-      (E) Dropped Content
-
-      (F) Facts"
-    target: (E)
-  - input: "The following translations from German to English contain a particular
-      error. That error will be one of the following types: Named Entities: An entity
-      (names, places, locations, etc.) is changed to a different entity. Numerical
-      Values: Numerical values (ordinals or cardinals), dates, and/or units are changed.
-      Modifiers or Adjectives: The modifiers and adjectives pertaining to a noun are
-      changed. Negation or Antonyms: Introduce or remove a negation or change comparatives
-      to their antonyms. Facts: Trivial factual errors not pertaining to the above
-      classes are introduced in the translations. Dropped Content: A significant clause
-      in the translation is removed. Please identify that error.  Source: \u0141eba ist
-      eine Kleinstadt und ein Badeort im Powiat L\u0119borski der polnischen Woiwodschaft
-      Pommern.
-
-      Translation: Eba is not a small town and seaside resort in the Powiat L\xE9borski
-      county of the Pomeranian Voivodeship of Poland.\nThe translation contains an error
-      pertaining to
-
-      Options:
-
-      (A) Modifiers or Adjectives
-
-      (B) Numerical Values
-
-      (C) Negation or Antonyms
-
-      (D) Named Entities
-
-      (E) Dropped Content
-
-      (F) Facts"
-    target: (C)
+      Opzioni:
+      (A) Modificatori o aggettivi
+      (B) Valori numerici
+      (C) Negazione o contrari
+      (D) Entità nominate
+      (E) Contenuto omesso
+      (F) Fatti"
+    target_translated: (C)
 include: _fewshot_template_yaml
 task: leaderboard_bbh_salient_translation_error_detection
