--- a/tasks/leaderboard-it/bbh_it/sports_understanding.yaml
+++ b/tasks/leaderboard-it/bbh_it/sports_understanding.yaml
@@ -1,17 +1,14 @@
 dataset_name: sports_understanding
-description: 'Determine whether an artificially constructed sentence relating to sports
-  is plausible or not.'
-doc_to_choice: ["yes","no"]
+description: 'Determina se una frase costruita artificialmente relativa allo sport è plausibile o meno.'
+doc_to_choice: ["sì","no"]
 fewshot_config:
   sampler: first_n
   samples:
-  - input: Is the following sentence plausible? "Bam Adebayo scored a reverse layup
-      in the Western Conference Finals."
-    target: 'yes'
-  - input: Is the following sentence plausible? "Santi Cazorla scored a touchdown."
-    target: 'no'
-  - input: Is the following sentence plausible? "DeMar DeRozan was called for the
-      goal tend."
-    target: 'yes'
+  - input_translated: È plausibile la seguente frase? "Bam Adebayo ha segnato un reverse layup nelle finali della Western Conference."
+    target_translated: 'sì'
+  - input_translated: È plausibile la seguente frase? "Santi Cazorla ha segnato un touchdown."
+    target_translated: 'no'
+  - input_translated: È plausibile la seguente frase? "DeMar DeRozan è stato chiamato per goaltending."
+    target_translated: 'sì'
 include: _fewshot_template_yaml
 task: leaderboard_bbh_sports_understanding
