--- a/tasks/leaderboard-it/bbh_it/tracking_shuffled_objects_three_objects.yaml
+++ b/tasks/leaderboard-it/bbh_it/tracking_shuffled_objects_three_objects.yaml
@@ -1,57 +1,38 @@
 dataset_name: tracking_shuffled_objects_three_objects
-description: 'A task requiring determining the final positions of a set of objects
-  given their initial positions and a description of a sequence of swaps.'
+description: 'Un compito che richiede di determinare le posizioni finali di un insieme di oggetti date le loro posizioni iniziali e una descrizione di una sequenza di scambi.'
 doc_to_choice: ["(A)","(B)","(C)"]
 fewshot_config:
   sampler: first_n
   samples:
-  - input: 'Alice, Bob, and Claire are playing a game. At the start of the game, they
-      are each holding a ball: Alice has a yellow ball, Bob has a blue ball, and Claire
-      has a pink ball.
+  - input_translated: "Alice, Bob e Claire stanno giocando a un gioco. All’inizio del gioco, ognuno di loro ha una palla: Alice ha una palla gialla, Bob ha una palla blu e Claire ha una palla rosa.
 
-      As the game progresses, pairs of players trade balls. First, Claire and Alice
-      swap balls. Then, Alice and Bob swap balls. Finally, Claire and Bob swap balls.
-      At the end of the game, Bob has the
+      Man mano che il gioco procede, le coppie di giocatori si scambiano le palle. Per prima cosa, Claire e Alice si scambiano le palle. Poi, Alice e Bob si scambiano le palle. Infine, Claire e Bob si scambiano le palle. Alla fine del gioco, Bob ha la
 
-      Options:
+      Opzioni:
 
-      (A) yellow ball
+      (A) palla gialla
+      (B) palla blu
+      (C) palla rosa"
+    target_translated: (A)
+  - input_translated: "Alice, Bob e Claire stanno giocando a un gioco. All’inizio del gioco, ognuno di loro ha una palla: Alice ha una palla bianca, Bob ha una palla viola e Claire ha una palla rosa.
 
-      (B) blue ball
+      Man mano che il gioco procede, le coppie di giocatori si scambiano le palle. Per prima cosa, Bob e Alice si scambiano le palle. Poi, Bob e Claire si scambiano le palle. Infine, Bob e Alice si scambiano di nuovo le palle. Alla fine del gioco, Alice ha la
 
-      (C) pink ball'
-    target: (A)
-  - input: 'Alice, Bob, and Claire are playing a game. At the start of the game, they
-      are each holding a ball: Alice has a white ball, Bob has a purple ball, and
-      Claire has a pink ball.
+      Opzioni:
 
-      As the game progresses, pairs of players trade balls. First, Bob and Alice swap
-      balls. Then, Bob and Claire swap balls. Finally, Bob and Alice swap balls. At
-      the end of the game, Alice has the
+      (A) palla bianca
+      (B) palla viola
+      (C) palla rosa"
+    target_translated: (C)
+  - input_translated: "Alice, Bob e Claire sono ballerini in una square dance. All’inizio di una canzone, ognuno di loro ha un partner: Alice balla con Lola, Bob balla con Rodrigo e Claire balla con Patrick.
 
-      Options:
+      Durante la canzone, i ballerini cambiano spesso partner. Per prima cosa, Alice e Bob si scambiano i partner. Poi, Claire e Bob si scambiano i partner. Infine, Bob e Alice si scambiano di nuovo i partner. Alla fine del ballo, Alice sta ballando con
 
-      (A) white ball
-
-      (B) purple ball
-
-      (C) pink ball'
-    target: (C)
-  - input: 'Alice, Bob, and Claire are dancers at a square dance. At the start of
-      a song, they each have a partner: Alice is dancing with Lola, Bob is dancing
-      with Rodrigo, and Claire is dancing with Patrick.
-
-      Throughout the song, the dancers often trade partners. First, Alice and Bob
-      switch partners. Then, Claire and Bob switch partners. Finally, Bob and Alice
-      switch partners. At the end of the dance, Alice is dancing with
-
-      Options:
+      Opzioni:
 
       (A) Lola
-
       (B) Rodrigo
-
-      (C) Patrick'
-    target: (C)
+      (C) Patrick"
+    target_translated: (C)
 include: _fewshot_template_yaml
 task: leaderboard_bbh_tracking_shuffled_objects_three_objects
